# aihero-repo-chat-agent

./: .flake8  Dockerfile  Untitled.ipynb  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
app/: README.md  app.py  ingest.py  logs.py  main.py  pyproject.toml  search_agent.py  search_tools.py
logs/: test_agent_20260406_144528_7ed6c3.json
project/: function.py
tests/: logging_test.py  test_agent.py  test_ingest.py  test_streaming.py
